# ml-aura

./: .gitignore  .pre-commit-config.yaml  ACKNOWLEDGEMENTS.md  README.md  pyproject.toml  requirements.txt
configs/: aura.yaml  responses.yaml
configs/rtp/: rtp_evaluation.yaml
scripts/: compute_responses.py  evaluate_toxicity.py  generate_with_hooks.py  learn_aura.py
src/datasets_lib/: __init__.py  collators.py  jigsaw_dataset.py  responses_io.py
src/hooks/: __init__.py  dampening.py  dummy.py  pooling_ops.py  postprocess_and_save_hook.py
src/models/: model_with_hooks.py
src/parsers/: parsers.py
src/utils/: auroc.py  utils.py
tests/: test_aura.py  test_datasets_lib.py  test_model.py  test_responses.py  test_responses_io.py
tests/configs/: aura_test.yaml  responses_test.yaml
tests/data/aura-test-max/tiny-gpt2/: transformer.h.1.mlp.c_proj.statedict
tests/data/aura-toxicity-max/tiny-gpt2/: transformer.h.0.mlp.c_proj.statedict
tests/data/damp-toxicity-max/tiny-gpt2/: transformer.h.1.mlp.c_proj.statedict
tests/data/jigsaw/: train.csv
tests/data/toxicity-responses/tiny-gpt2/jigsaw/non-toxic/transformer.h.0.mlp.c_proj/max/: 5d3f045341077080.pt
tests/data/toxicity-responses/tiny-gpt2/jigsaw/non-toxic/transformer.h.1.mlp.c_proj/max/: 5d3f045341077080.pt
tests/data/toxicity-responses/tiny-gpt2/jigsaw/toxic/transformer.h.0.mlp.c_proj/max/: 11a1703cf04cd84e.pt
tests/data/toxicity-responses/tiny-gpt2/jigsaw/toxic/transformer.h.1.mlp.c_proj/max/: 11a1703cf04cd84e.pt
